--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -119,3 +119,57 @@
     max-width: 960px;
     margin: auto;
 }
+
+.box-how-it-works{
+    padding-top: 88px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+.title-header{
+    text-align: center;
+    padding-bottom: 40px;
+    font-family: Nunito Sans,sans-serif;
+    font-style: normal;
+    font-weight: 999;
+    line-height: 32px;
+    font-size: 24px;
+    text-align: center;
+    color: #212b36;
+}
+
+.list-how{
+    display: flex;
+}
+
+.how-item{
+    width: 33.3333%;
+    padding: 0 20px 0px 20px;
+}
+
+.how-item img{
+    display: block;
+    margin: auto;
+    width: 40px;
+}
+
+.how-item .title{
+    font-family: Nunito Sans,sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    font-size: 16px;
+    color: #212b36;
+    padding: 8px 0px 8px 0px;
+    text-align: center;
+}
+
+.how-item .note{
+    font-family: Nunito Sans,sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    font-size: 16px;
+    text-align: center;
+    color: #637381;
+}
